# Full-Stack-AI-Agent-with-RAG-and-Memory

./: .gitignore  README.md  agent_graph.py  agent_test.py  build_database.py  build_pipeline.py  create_pinecone_index.py  delete_pinecone_index.py  direct_resume_tool_check.py  main.py  manual_master_chat_checks.py  mcp_server.py  processed_chunks.json  pyproject.toml  requirements.txt  upload_to_pinecone.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: Agent.jsx  App.css  App.jsx  Chat.jsx  DocumentChat.jsx  index.css
my_vector_db/: chroma.sqlite3
