[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Adarsh Kumar <cuadarsh07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
groq = "^1.0.0"
python-dotenv = "^1.2.2"
pypdf = "^6.8.0"
langchain = "^1.2.10"
langchain-community = "^0.4.1"
langgraph = "^1.0.4"
chromadb = "^1.5.4"
sentence-transformers = "^5.2.3"
tavily-python = "^0.7.12"
requests = "^2.32.5"
wikipedia = "^1.4.0"
mcp = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
